--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'Bundle comparison'
-description: 'Compare the bundle size between the base branch and the current branch'
+name: 'Advanced bundle comparison'
+description: 'Compare the bundle size between the base branch and the current branch with some extra configurations'
 inputs:
   current-stats-json-path:
     description: 'The path to the current stats.json file'
@@ -15,5 +15,5 @@ inputs:
     required: false
 
 runs:
-  using: 'node16'
+  using: 'node18'
   main: 'dist/index.js'
