--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,9 @@ inputs:
   title:
     description: 'An optional addition to the title, which also helps key comments, useful if running more than 1 copy of this action'
     required: false
+  username:
+    description: 'An optional input, defining the username of the account that places the comment.'
+    required: false
 
 runs:
   using: 'node18'
